# libwing

./: .gitignore  CMakeLists.txt  Cargo.toml  Discovery.md  README.md  SDK.md  WingConsole.cpp  WingConsole.h  WingNode.cpp  WingNode.h  libwing.h  wing-schema.cpp  wing-schema.map  wing_c_api.cpp  wing_c_api.h  wingmon.cpp  wingschema.cpp
.github/workflows/: cargo.yml  cmake-multi-platform.yml
c++/: README.md  WingConsole.cpp  WingNode.cpp  wingschema.cpp
c++/osc/: OSC.cpp  OSCMessage.cpp  OSCMessage.h
rust/: Cargo.toml
rust/src/: README.md  console.rs  ffi.rs  lib.rs  node.rs  propmap.rs
rust/tools/: wingmon.rs  wingschema.rs
src/: console.rs  empty-propmap.rs  ffi.rs  lib.rs  node.rs  propmap.rs
tools/: utils.rs  wingmon.rs  wingprop.rs  wingschema.rs
